# rust-projects

audio_spectrum_analyze/: Cargo.toml  readme.md
audio_spectrum_analyze/src/: main.rs
basic_blockchain/: Cargo.toml
basic_blockchain/src/: blockchain.rs  main.rs
basic_web_api/: Cargo.toml
basic_web_api/src/: database.rs  handlers.rs  main.rs  models.rs
bouncing_balls_simulation/: Cargo.toml
bouncing_balls_simulation/src/: main.rs
dom_and_html_parse/: Cargo.toml
dom_and_html_parse/src/: dom.rs  html_parse.rs
file_encryption/: Cargo.toml  key.txt
file_encryption/encrypted_files/: key.txt
file_encryption/keys/: encryption.key
file_encryption/src/: cli.rs  encryption.rs  main.rs  storage.rs
file_organiser_gui/: Cargo.toml
file_organiser_gui/src/: app.rs  category.rs  main.rs
file_organiser_gui/src/utils/: file_operations.rs
file_organizer/: Cargo.toml
file_organizer/src/: main.rs
paint_app/: Cargo.toml
paint_app/src/: main.rs
pomodoro_pro/: Cargo.toml  README.md
pomodoro_pro/src/: main.rs
pomodoro_timer/: Cargo.toml  README.md
pomodoro_timer/src/: main.rs
pong_game/: Cargo.toml
pong_game/src/: main.rs
pong_pro/: Cargo.toml
pong_pro/src/: main.rs
raytracing_demo/: Cargo.toml  readme.md
raytracing_demo/src/: main.rs
snake_game/src/: draw.rs  game.rs  main.rs  snake.rs
snippet_master/: Cargo.toml  README.md
snippet_master/src/: main.rs
task_manager/: Cargo.toml  README.md  tasks.json
task_manager/src/: main.rs
text_editor/: Cargo.toml
text_editor/src/: config.rs  (+1 more)
yew_app/: Cargo.toml  index.html  style.css
(+3 files in other folders)
