[package]
name = "basic_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.11.5"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
chrono = {version = "0.4.38", features = ["serde"]}
uuid = {version = "1.11.0", features = ["v4", "serde"]}
