[package]
name = "file_organiser_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.0", features = ["default"] }
egui = "0.24.0"
rfd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "shellapi", "commctrl"] }