[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = "0.26"